--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 lsi: false
 safe: true
-source: [your repo's top level directory]
+source: syxsense_docs
 incremental: false
 highlighter: rouge
 gist:
